# UFMG_space_invaders_allegro

./: CMakeLists.txt  README.md  game_state.c  game_state.h  gameover_state.c  gameover_state.h  main.c  menu_state.c  menu_state.h  stdafx.h
allegro/: CHANGES-5.2.txt  allegro.mft
allegro/android/gradle_project/allegro/src/main/java/org/liballeg/android/: AllegroJoystick.java
allegro/docs/html/refman/: acodec.html  audio.html  color.html  config.html  direct3d.html  display.html  events.html  file.html  fixed.html  font.html  fshook.html  fullscreen_mode.html  getting_started.html  graphics.html  haptic.html  image.html  index.html  index_all.html  joystick.html  keyboard.html  main.html  memfile.html  memory.html  misc.html  monitor.html  mouse.html  native_dialog.html  opengl.html  path.html  physfs.html  platform.html  primitives.html  shader.html  state.html  system.html  threads.html  time.html  timer.html  touch.html  transformations.html  (+2 more)
allegro/docs/man/: ALLEGRO_JOYFLAGS.3  ALLEGRO_MOUSE_STATE.3  ALLEGRO_RENDER_FUNCTION.3  al_draw_soft_line.3  al_draw_text.3  al_draw_ustr.3  al_get_errno.3  al_get_glyph_advance.3  al_get_glyph_dimensions.3  al_get_new_bitmap_depth.3  al_get_new_bitmap_samples.3  al_insert_menu_item.3  al_is_event_source_registered.3  al_set_errno.3  al_set_new_bitmap_depth.3  al_set_new_bitmap_samples.3
allegro/examples/: ex_depth_mask.c  ex_palette.c
